<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".view.login.LoginFragment">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_yin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_logo_title_yin"
            android:gravity="center_horizontal"
            android:text="@string/yin"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />


        <TextView
            android:id="@+id/tv_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/and"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_yin"
            app:startIconDrawable="@drawable/ic_circle_account" />


        <TextView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_logo_title"
            android:gravity="center_horizontal"
            android:text="@string/yummy"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_and" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_username"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_email"
            app:startIconDrawable="@drawable/ic_circle_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_password"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_username"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgetPassword"
            app:layout_constraintEnd_toEndOf="@+id/icon_password"
            app:layout_constraintTop_toBottomOf="@+id/icon_password" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/BlueButton"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgetPassword" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/create_new_acc"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>