<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.registration.RegistrationFragment"
        android:padding="20dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_familyName"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/familyName"
            app:startIconDrawable="@drawable/ic_cricle_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_familyName"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_givenName"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/givenName"
            app:startIconDrawable="@drawable/ic_cricle_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_familyName">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_givenName"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_email"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_givenName">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_username"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_cricle_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_username"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_password"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/icon_retypePassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/retypePassword"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_retypePassword"
                android:layout_width="330dp"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="35dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_retypePassword"
            android:text="@string/btn_register"
            style="@style/BlueButton"/>

        <TextView
            android:id="@+id/txt_have_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_have_acc"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>